# ZapMeNot

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  README.rst  TODO.rst  class.list  detector.py  isotope.py  isotopes.yml  location.py  material.py  materials.yml  model.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  shield.py  source.py
ZapMeNot/: __about__.py  detector.py  isotope.py  isotopeLibrary.yml  location.py  material.py  materialLibrary.yml  model.py  ray.py  shield.py  source.py
benchmarks/: Book1.xlsx  readme.txt  test_benchmark-0.py  test_benchmark-1.py  test_benchmark-2.py  test_benchmark-3.py  test_benchmark-4.py  test_benchmark-5.py  test_benchmark-6.py  test_benchmark-6a.py  test_benchmark-7.py  test_benchmark-7a.py  test_benchmark-7b.py  test_benchmark-8.out  test_benchmark-8.py  test_benchmark-synth.py
benchmarks/workbooks/: benchmark-0.ipynb  benchmark-1.ipynb  benchmark-2.ipynb  benchmark-3.ipynb  benchmark-4.ipynb  benchmark-5.ipynb  benchmark-8.ipynb  benchmark-synth.ipynb
dataConversion/: ANS6-4-3 compendium.xlsm  attenCoefs  attenuationCoefficients  convert.py  decay_data.txt  densities.txt  generateIsotopeLibraryRev1.py  generateIsotopeLibraryRev2.py  generateIsotopeLibraryRev3.py  generateIsotopeLibraryRev4.py  isotopeLibraryRev3.yml  isotopeLibraryRev4.yml  lister.py  moreMats.yml  newIsotopeLibrary.yml  parseAttenCoefs.py
dataConversion/icrp/: ICRP-07.NDX  LICENSE.TXT
dataConversion/materialLibraryValidation/: absorb.py  atten.py  buildup.py  density.py  materialLibrary.yml  validateKeys.py
dataConversion/updates/: runner.py  spankynewIsotopeLibrary.yml
doc-gen/source/: usage.rst
docs/: .buildinfo  Makefile  ZapMeNot.html  ZapMeNot.rst11.html  authorship.html  benchmarks.html  developer.html  genindex.html  getting-started.html  graphics.html  index.html  installation.html  introduction.html  isotopes.html  license.html  materials.html  modeling.html  module-docs.html  module_docs.html  objects.inv  py-modindex.html  quickstart.html  readme.html  results.html  search.html  searchindex.js  theory-and-methods.html  tutorial.html  usage.html  version-history.html  version_history.html
docs/_modules/: index.html
docs/_sources/: authorship.rst.txt  benchmarks.rst.txt  developer.rst.txt  getting-started.rst.txt  graphics.rst.txt  index.rst.txt  introduction.rst.txt  isotopes.rst.txt  license.rst.txt  materials.rst.txt  modeling.rst.txt  module-docs.rst.txt  module_docs.rst.txt  quickstart.rst.txt  results.rst.txt  theory-and-methods.rst.txt  tutorial.rst.txt  version-history.rst.txt
docs/html/: .buildinfo  ZapMeNot.html  genindex.html  index.html  isotopes.html  materials.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/source/: ZapMeNot.rst  conf.py  index.rst  isotopes.csv  isotopes.rst  modules.rst
docsrc/: Makefile
docsrc/source/: ZapMeNot.rst  benchmarks.rst  conf.py  developer.rst  getting-started.rst  gettingStarted.rst  graphics.rst  index.rst  installation.rst  isotopes.csv  isotopes.rst  license.rst  materials.rst  modeling.rst  module-docs.rst  quickstart.rst  (+4 more)
notebooks/: cmdline.py  test.ipynb
point_kernel/: isotope.py  isotopeLibrary.yml  material.py  model.py  shield.py
profile/: Book1.xlsx  output.file  profile_benchmark-6.py  results
samples/: graphics.ipynb  mixer.ipynb  no-graphics.ipynb  test-trame.ipynb
tests/: buildupFactor.m  case1.m  case2.m  crossingLength.m  getattenCoeff.m  test-display.py  test_buildup.py  test_detector.py  test_display.py  test_isotope.py  test_material.py  test_model.py  test_ray.py  test_shield.py  test_source.py
tutorial/: tutorial.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb  tutorial5.ipynb  tutorial6.ipynb  tutorial7.ipynb  tutorial8.ipynb  tutorial9.ipynb
zap_me_not/: __about__.py  detector.py  isotope.py  isotopeLibrary.yml  material.py  materialLibrary.yml  materialLibrary.ymlold.yml  model.py  ray.py  shield.py  source.py
zapmenot/: __about__.py  detector.py  isotope.py  material.py  model.py  shield.py  source.py
(+129 files in other folders)
