# setup data for zapmenot
# need to move data from __about__.py to __init__.py
[metadata]
name = attr: zap_me_not.__about__.__package_name__
version = attr: zap_me_not.__about__.__version__
author = attr: zap_me_not.__about__.__author__
author_email = attr: zap_me_not.__about__.__author_email__
copyright = attr: zap_me_not.__about__.__copyright__
description = attr: zap_me_not.__about__.__description__
url = attr: zap_me_not.__about__.__url__
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.4
install_requires =
    pyvista
    scipy >= 0.14
    numpy >= 1.18.1
    pyyaml >= 5.3
tests_require =
    pytest
    pandas

[options.extras_require]
notebook = jupyterlab
dev = 
    sphinx
    sphinx-rtd-theme
    flake8
