# setup data for zapmenot
# need to move data from __about__.py to __init__.py
[metadata]
name = zapmenot
version = attr: zap_me_not.__about__.__version__
author = "Alan Ford"
author_email = ""
copyright = "2019 - 2022, Alan Ford."
description = "Library of routines for performing point kernel photon shielding calculations."
url = 'https://github.com/AlanFord/ZapMeNot'
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.4
zip_safe = True
include_package_data = True
install_requires =
    pyvista
    scipy >= 0.14
    numpy >= 1.18.1
    pyyaml >= 5.3
tests_require =
    pytest
    pandas

[options.package_data]
zap_me_not = materialLibrary.yml, isotopeLibrary.yml

[options.extras_require]
notebook = jupyterlab
dev = 
    sphinx
    sphinx-rtd-theme
    flake8
    build
