# setup data for zapmenot
# need to move data from __about__.py to __init__.py
[metadata]
name = zapmenot
version = attr: zapmenot.__about__.__version__
author = "Alan Ford"
author_email = ""
copyright = "2019 - 2025, Alan Ford."
description = "Library of routines for performing point kernel photon shielding calculations."
url = 'https://github.com/AlanFord/ZapMeNot'
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.13
zip_safe = True
include_package_data = True
install_requires =
    pyvista >=0.45
    scipy >=1.15
    pyyaml >=6.0
tests_require =
    pytest >=8.4
    pandas >=2.3

[options.package_data]
zapmenot = materialLibrary.yml, isotopeLibrary.yml

[options.extras_require]
notebook = 
    jupyterlab >=4.4
    trame >=3.10
    trame-vtk >=2.8.17
    trame-vuetify >=3.0
    ipywidgets >=8.1.7
dev = 
    sphinx >=8.2
    sphinx-rtd-theme >=3.0
    flake8 >=7.2
    python-build >=1.2
